All API endpoints implemented but completely untested
